--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -58,6 +58,10 @@ button{
     cursor: pointer;
 }
 
+button:hover {
+    background-color: #0d941d;
+    scale: 1.05;
+}
 .register-link {
     margin-top: 20px;
     text-align: center;
