--- a/public/styles/HomePage.css
+++ b/public/styles/HomePage.css
@@ -24,6 +24,7 @@
   .nav-right {
     display: flex;
     align-items: center;
+    margin-right: 30px;
   }
   
   nav ul {
@@ -72,7 +73,7 @@
   button {
     background-color: #ffffff;
     color: #080710;
-    padding: 10px 20px;
+    padding: 10px 50px;
     font-size: 16px;
     font-weight: 600;
     border: none;
@@ -84,4 +85,7 @@
     background-color: #0d941d;
     scale: 1.05;
   }
-  
+  h1 {
+    font-size: 40px;
+    text-align: center;
+  }
