--- a/public/styles/HomePage.css
+++ b/public/styles/HomePage.css
@@ -89,3 +89,26 @@
     font-size: 40px;
     text-align: center;
   }
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.content {
+    flex: 1 0 70%; /* 70% des verfügbaren Platzes */
+    text-align: justify;
+}
+
+.sidebar {
+    flex: 1 0 25%; /* 25% des verfügbaren Platzes */
+    padding: 25px;
+}
+
+footer {
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+}
