--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -128,13 +128,24 @@ hr{
   left: 10px;
   width: 100px;
   height: 20px;
-  border-radius:45%;
+  border-radius:25px;
 }
 
 .Addbuttontask{
   position: relative;
   width: 100px;
   height: 20px;
+}
+
+.addTaskButton {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  font-size: 35px;
+  background-color: green;
+  text-align: center;
+  position: relative;
+  top: 100%;
 }
 
 .Addbuttontasklist:hover, .Addbuttontask:hover{
@@ -179,4 +190,22 @@ hr{
   flex-direction: row;
   align-items: center;
   
+}
+
+#addTaskPopUp {
+  display: none;
+  position: absolute;
+  height: 80%;
+  width: 50%;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  padding: 25px;
+  background-color: red;
+}
+
+#addTaskForm {
+  display: flex;
+  flex-direction: column;
 }
