--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -41,6 +41,7 @@ header{
   scale: 1;
 }
 .trashicon{
+  position:relative;
   height:70%;
   scale:1;
   padding: 10px;
@@ -87,17 +88,7 @@ hr{
   
 }
 
-.Tasklistcontent{
-  overflow-y: scroll;
-  overflow-x: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  
-  position: relative;
-  height: calc(100%-30px);
-  width: 100%;
 
-}
 
 
 .groupTasks, .personalTasks {
@@ -137,16 +128,6 @@ hr{
   height: 20px;
 }
 
-.addTaskButton {
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  font-size: 35px;
-  background-color: green;
-  text-align: center;
-  position: relative;
-  top: 100%;
-}
 
 .Addbuttontasklist:hover, .Addbuttontask:hover{
   background-color: #29c934;
@@ -158,10 +139,23 @@ hr{
   /* Dieser Bereich für die Javascript Funktion bei Auswahl einer Lister, dass deren Tasks geladen werden*/
 }
 
-.Task{
-  height: 40px;
-  background-color: rgb(255, 206, 71);
+.Tasklistcontent{
   position: relative;
+  height: calc(100%-30px);
+  width: 100%;
+
+  overflow-y: scroll;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+
+}
+
+.Task{
+  position: relative;
+  height: 40px;
+  width: 100%;
+  background-color: rgb(255, 206, 71); 
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -192,7 +186,7 @@ hr{
   
 }
 
-#addTaskPopUp {
+#addTaskPopUp, #addListPopUp {
   display: none;
   position: absolute;
   height: 80%;
