--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -47,7 +47,14 @@ header{
   padding: 10px;
   border-radius:50%;
 }
-.trashicon:hover{
+.trashicon2{
+  position:relative;
+  height: 45%;
+  scale:1;
+  padding: 10px;
+  border-radius:50%;
+}
+.trashicon:hover, .trashicon2:hover{
   background-color: red;
   scale:1.1;
 }
@@ -114,10 +121,15 @@ hr{
 .List {/*Das ist In der Auflistung der Listen eine einzelne Liste*/
   position: relative;
   left:4%;
+  height:60px;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  display:flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
 
   box-sizing: border-box;
   border-bottom: 2px solid black;
