--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -41,6 +41,7 @@ header{
   scale: 1;
 }
 .trashicon{
+  cursor:pointer;
   position:relative;
   height:70%;
   scale:1;
@@ -48,6 +49,7 @@ header{
   border-radius:50%;
 }
 .trashicon2{
+  cursor:pointer;
   position:relative;
   height: 45%;
   scale:1;
@@ -138,6 +140,7 @@ hr{
   font-family: "Times New Roman", Times, serif;
 }
 .Addbuttontasklist{
+  cursor:pointer;
   position: relative;
   top: 10px;
   left: 10px;
@@ -147,6 +150,7 @@ hr{
 }
 
 .Addbuttontask{
+  cursor:pointer;
   position: relative;
   width: 100px;
   height: 20px;
@@ -156,11 +160,6 @@ hr{
 .Addbuttontasklist:hover, .Addbuttontask:hover{
   background-color: #29c934;
 
-}
-
-.List:active{
-  background-color: rgb(113, 96, 208);
-  /* Dieser Bereich für die Javascript Funktion bei Auswahl einer Lister, dass deren Tasks geladen werden*/
 }
 
 .Tasklistcontent{
@@ -204,6 +203,7 @@ hr{
 }
 
 .checkbox{
+  cursor:pointer;
   height:30px;
   width: 30px;
   
@@ -235,4 +235,8 @@ hr{
 #addTaskForm {
   display: flex;
   flex-direction: column;
+}
+
+#listSpeichern{
+  cursor:pointer;
 }
