--- a/public/styles/HomePage.css
+++ b/public/styles/HomePage.css
@@ -1,113 +1,169 @@
-body {
-  margin: 0;
-  font-family: Arial, sans-serif;
-}
-nav {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  border-bottom: 1px solid #000;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  display: flex;
-  justify-content: space-between; /* Align items and button */
-  align-items: center;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*,
+::before,
+::after{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
-.nav-left {
-  display: flex;
-  align-items: center;
+html{
+    font-size:13px;
 }
 
-.nav-right {
-  display: flex;
-  align-items: center;
-  margin-right: 30px;
+body{
+    font-family: "Poppins", sans-serif;
+    font-size:1rem;
+    background: #fff;
+    color:#333;
 }
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  display: flex; /* Make the navigation items flex */
-  align-items: center;
+.navbar{
+    width:100%;
+    position:fixed;
+    top:0;
+    left:0;
+    background: #101d23;
+    padding:0 5%;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-nav ul li {
-  position: relative;
-  margin: 0 10px;
+.logo{
+    width:5rem
 }
 
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-  padding: 10px;
-  display: block;
+.logo img{
+    width:100%;
 }
 
-nav ul li ul {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: #333;
-  padding: 10px;
-  border-top: 2px solid #fff;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+.menu{
+    list-style: none;
 }
 
-nav ul li:hover ul {
-  display: block;
+.menu li{
+    position: relative;
+    float:left;
 }
 
-nav ul li ul li {
-  margin: 0;
-  padding: 8px 0;
+.menu li a{
+    font-family: "Poppins", sans-serif;
+    font-size:1.2rem;
+    color:#d6e0f9;
+    display:block;
+    text-decoration: none;
+    padding:1rem 1.5rem;
 }
 
-nav ul li ul li a {
-  color: #fff;
-  text-decoration: none;
-  padding: 8px 20px; /* Add padding to dropdown items */
-  display: block;
+.menu li a:hover{
+    background: #495ca8;
 }
 
-nav ul li ul li a:hover {
-  background-color: #444; /* Change background color on hover */
+.submenu{
+    position: absolute;
+    left:0;
+    background: #101d23;
+    display:none;
+    transition: all .3s ease-in-out;
 }
 
-.Logo {
-  height: 100px;
-  scale: 1;
+.submenu-wrapper:hover .submenu,
+.submenu-wrapper:focus-within .submenu{
+    display: initial;
 }
 
-button {
-  background-color: #ffffff;
-  color: #080710;
-  padding: 10px 50px;
-  font-size: 16px;
-  font-weight: 600;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
+.submenu li{
+    width:100%;
+    border-top:.1rem solid #222f37;
+    list-style: none;
 }
 
-button:hover {
-  background-color: #0d941d;
-  scale: 1.05;
-}
-h1 {
-  font-size: 40px;
-  text-align: center;
-}
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  padding: 20px;
+.toggle-btn {
+    display: none; /* Initially hide the toggle button */
+    z-index:1000;
 }
 
+.icon {
+    position: relative;
+    width: 1.5rem;
+    height: .8rem;
+    cursor: pointer;
+    z-index:100;
+}
+
+.icon::before {
+    top: 0;
+    right:0;
+    content: '';
+    position: absolute;
+    width: 2rem;
+    height: .2rem;
+    background-color: #d6e0f9;
+    transition: all 0.3s ease-in-out;
+}
+
+.icon::after {
+    bottom: 0;
+    right:0;
+    content: '';
+    position: absolute;
+    width: 1.5rem;
+    height: .2rem;
+    background-color: #d6e0f9;
+    transition: transform 0.3s ease-in-out;
+}
+
+/* Rotate the before and after lines to create the close icon effect */
+.icon.active::before {
+    width:1.5rem;
+    transform: rotate(-45deg) translate(-0.21rem, 0.21rem);
+}
+
+.icon.active::after {
+    transform: rotate(45deg) translate(-0.21rem, -0.21rem);
+}
+
+
+@media (max-width: 991px){
+    .toggle-btn{
+        display: block;
+    }
+
+    .menu{
+        width:100%;
+        position:absolute;
+        top:100%;
+        left:0;
+        background: #101d23;
+        border-top: .1rem solid #222f37;
+        display:none;
+    }
+
+    .menu.active{
+        display:initial
+    }
+
+    .menu li{
+        width:100%;
+        border-top: .1rem solid #222f37;
+    }
+
+    .submenu{
+        position: relative;
+        width:100%;
+    }
+
+    .submenu li{
+        background: #222f37;
+        border-top: .1rem solid #101d23;
+    }
+
+    .submenu li a{
+        padding-left:2rem;
+    }
+}
 .content {
   flex: 1 0 70%; /* 70% des verfügbaren Platzes */
   text-align: justify;
@@ -122,8 +178,24 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #333; /* Choose your preferred background color */
-  color: #fff; /* Choose your preferred text color */
-  padding: 20px 0; /* Adjust padding as needed */
+  background-color: #333; 
+  color: #fff; 
+  padding: 20px 0; 
   text-align: center;
+}
+
+button {
+  background-color: #ffffff;
+  color: #080710;
+  padding: 5px 30px;
+  font-size: 12px;
+  font-weight: 600;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #0d941d;
+  scale: 1.05;
 }
