--- a/public/styles/HomePage.css
+++ b/public/styles/HomePage.css
@@ -226,3 +226,53 @@ footer {
   padding: 20px 0; 
   text-align: center;
 }
+
+footer .footer-row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content:space-evenly;
+    gap:3.5rem;
+    padding: 60px;
+}
+
+.footer-row .footer-col h4 {
+    color: #fff;
+    font-size: 1.2rem;
+    font-weight: 400;
+  }
+  .footer-col .links {
+    margin-top: 20px;
+  }
+  .footer-col .links li {
+    list-style: none;
+    margin-bottom: 10px;
+  }
+  .footer-col .links li a {
+    text-decoration: none;
+    color:#d6e0f9;
+  }
+  
+  .footer-col .links li a:hover {
+    color: #fff;
+  }
+
+  .footer-col p {
+    margin: 20px 0;
+    max-width: 300px;
+  }
+  
+  
+  @media (max-width: 768px) {
+    .footer {
+      position: relative;
+      bottom: 0;
+      left: 0;
+      transform: none;
+      width: 100%;
+      border-radius: 0;
+    }
+    .footer .footer-row {
+      padding: 20px;
+      gap: 1rem;
+    }
+}
