--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -1,8 +1,8 @@
-body {
-    background-color: #242624;
-    overflow-x: hidden;
-}
-
-* {
-    color: white;
-}
+:root {
+    --backgrounddark-color: #101d23;
+    --backgroundlight-color:#1c8fc5;
+    --textlight-color: #d6e0f9;
+    --textdark-color:#033045;
+    --green-color:rgb(83, 240, 35);
+    --yellow-color: rgb(255, 206, 71);
+  }
