--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,169 +1,169 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 *,
 ::before,
-::after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-html{
-    font-size:13px;
+html {
+  font-size: 13px;
 }
 
-body{
-    font-family: "Poppins", sans-serif;
-    font-size:1rem;
-    background: #d6e0f9;
-    color:#333;
+body {
+  font-family: "Poppins", sans-serif;
+  font-size: 1rem;
+  background: #d6e0f9;
+  color: #333;
 }
 
-.navbar{
-    width:100%;
-    position:fixed;
-    top:0;
-    left:0;
-    background: #101d23;
-    padding:0 5%;
-    display:flex;
-    align-items: center;
-    justify-content: space-between;
-    z-index: 3000;
+.navbar {
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background: #101d23;
+  padding: 0 5%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  z-index: 3000;
 }
 
-.logo{
-    width:5rem
+.logo {
+  width: 5rem;
 }
 
-.logo img{
-    width:100%;
+.logo img {
+  width: 100%;
 }
 
-.menu{
-    list-style: none;
+.menu {
+  list-style: none;
 }
 
-.menu li{
-    position: relative;
-    float:left;
+.menu li {
+  position: relative;
+  float: left;
 }
 
-.menu li a{
-    font-family: "Poppins", sans-serif;
-    font-size:1.2rem;
-    color:#d6e0f9;
-    display:block;
-    text-decoration: none;
-    padding:1rem 1.5rem;
+.menu li a {
+  font-family: "Poppins", sans-serif;
+  font-size: 1.2rem;
+  color: #d6e0f9;
+  display: block;
+  text-decoration: none;
+  padding: 1rem 1.5rem;
 }
 
-.menu li a:hover{
-    background: #495ca8;
+.menu li a:hover {
+  background: #495ca8;
 }
 
-.submenu{
-    position: absolute;
-    left:0;
-    background: #101d23;
-    display:none;
-    transition: all .3s ease-in-out;
+.submenu {
+  position: absolute;
+  left: 0;
+  background: #101d23;
+  display: none;
+  transition: all 0.3s ease-in-out;
 }
 
 .submenu-wrapper:hover .submenu,
-.submenu-wrapper:focus-within .submenu{
-    display: initial;
+.submenu-wrapper:focus-within .submenu {
+  display: initial;
 }
 
-.submenu li{
-    width:100%;
-    border-top:.1rem solid #222f37;
-    list-style: none;
+.submenu li {
+  width: 100%;
+  border-top: 0.1rem solid #222f37;
+  list-style: none;
+  transition: 0.3s ease;
 }
 
 .toggle-btn {
-    display: none; /* Initially hide the toggle button */
-    z-index:1000;
+  display: none; /* Initially hide the toggle button */
+  z-index: 1000;
 }
 
 .icon {
-    position: relative;
-    width: 1.5rem;
-    height: .8rem;
-    cursor: pointer;
-    z-index:100;
+  position: relative;
+  width: 1.5rem;
+  height: 0.8rem;
+  cursor: pointer;
+  z-index: 100;
 }
 
 .icon::before {
-    top: 0;
-    right:0;
-    content: '';
-    position: absolute;
-    width: 2rem;
-    height: .2rem;
-    background-color: #d6e0f9;
-    transition: all 0.3s ease-in-out;
+  top: 0;
+  right: 0;
+  content: "";
+  position: absolute;
+  width: 2rem;
+  height: 0.2rem;
+  background-color: #d6e0f9;
+  transition: all 0.3s ease-in-out;
 }
 
 .icon::after {
-    bottom: 0;
-    right:0;
-    content: '';
-    position: absolute;
-    width: 1.5rem;
-    height: .2rem;
-    background-color: #d6e0f9;
-    transition: transform 0.3s ease-in-out;
+  bottom: 0;
+  right: 0;
+  content: "";
+  position: absolute;
+  width: 1.5rem;
+  height: 0.2rem;
+  background-color: #d6e0f9;
+  transition: transform 0.3s ease-in-out;
 }
 
 /* Rotate the before and after lines to create the close icon effect */
 .icon.active::before {
-    width:1.5rem;
-    transform: rotate(-45deg) translate(-0.21rem, 0.21rem);
+  width: 1.5rem;
+  transform: rotate(-45deg) translate(-0.21rem, 0.21rem);
 }
 
 .icon.active::after {
-    transform: rotate(45deg) translate(-0.21rem, -0.21rem);
+  transform: rotate(45deg) translate(-0.21rem, -0.21rem);
 }
 
+@media (max-width: 991px) {
+  .toggle-btn {
+    display: block;
+  }
 
-@media (max-width: 991px){
-    .toggle-btn{
-        display: block;
-    }
+  .menu {
+    width: 100%;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background: #101d23;
+    border-top: 0.1rem solid #222f37;
+    display: none;
+  }
 
-    .menu{
-        width:100%;
-        position:absolute;
-        top:100%;
-        left:0;
-        background: #101d23;
-        border-top: .1rem solid #222f37;
-        display:none;
-    }
+  .menu.active {
+    display: initial;
+  }
 
-    .menu.active{
-        display:initial
-    }
+  .menu li {
+    width: 100%;
+    border-top: 0.1rem solid #222f37;
+  }
 
-    .menu li{
-        width:100%;
-        border-top: .1rem solid #222f37;
-    }
+  .submenu {
+    position: relative;
+    width: 100%;
+  }
 
-    .submenu{
-        position: relative;
-        width:100%;
-    }
+  .submenu li {
+    background: #222f37;
+    border-top: 0.1rem solid #101d23;
+  }
 
-    .submenu li{
-        background: #222f37;
-        border-top: .1rem solid #101d23;
-    }
-
-    .submenu li a{
-        padding-left:2rem;
-    }
+  .submenu li a {
+    padding-left: 2rem;
+  }
 }
 
 .image-container {
@@ -196,8 +196,6 @@ body{
   font-size: 1.2em;
 }
 
-
-
 .content {
   flex: 1 0 70%; /* 70% des verfügbaren Platzes */
   text-align: justify;
@@ -211,7 +209,6 @@ body{
   margin-top: 60px; /* Adjust this value to match the height of your navbar */
 }
 
-
 .sidebar {
   flex: 1 0 25%; /* 25% des verfügbaren Platzes */
   padding: 25px;
@@ -221,129 +218,128 @@ footer {
   bottom: 0;
   left: 0;
   width: 100%;
-  background-color: #101d23; 
-  color: #d6e0f9; 
-  padding: 20px 0; 
+  background-color: #101d23;
+  color: #d6e0f9;
+  padding: 20px 0;
   text-align: center;
 }
 
 footer .footer-row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:space-evenly;
-    gap:3.5rem;
-    padding: 60px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 3.5rem;
+  padding: 60px;
 }
 
 .footer-row .footer-col h4 {
-    color: #fff;
-    font-size: 1.2rem;
-    font-weight: 400;
-  }
-  .footer-col .links {
-    margin-top: 20px;
-  }
-  .footer-col .links li {
-    list-style: none;
-    margin-bottom: 10px;
-  }
-  .footer-col .links li a {
-    text-decoration: none;
-    color:#d6e0f9;
-  }
-  
-  .footer-col .links li a:hover {
-    color: #fff;
-  }
+  color: #fff;
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+.footer-col .links {
+  margin-top: 20px;
+}
+.footer-col .links li {
+  list-style: none;
+  margin-bottom: 10px;
+}
+.footer-col .links li a {
+  text-decoration: none;
+  color: #d6e0f9;
+}
 
-  .footer-col p {
-    margin: 20px 0;
-    max-width: 300px;
+.footer-col .links li a:hover {
+  color: #fff;
+}
+
+.footer-col p {
+  margin: 20px 0;
+  max-width: 300px;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    transform: none;
+    width: 100%;
+    border-radius: 0;
   }
-  
-  
-  @media (max-width: 768px) {
-    .footer {
-      position: relative;
-      bottom: 0;
-      left: 0;
-      transform: none;
-      width: 100%;
-      border-radius: 0;
-    }
-    .footer .footer-row {
-      padding: 20px;
-      gap: 1rem;
-    }
+  .footer .footer-row {
+    padding: 20px;
+    gap: 1rem;
+  }
 }
 
 .card-list {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    max-width: 1250px;
-    margin: 150px auto;
-    padding: 20px;
-    gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  max-width: 1250px;
+  margin: 150px auto;
+  padding: 20px;
+  gap: 20px;
 }
 .card-list .card-item {
-    background: #fff;
-    padding: 26px;
-    border-radius: 8px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
-    list-style: none;
-    cursor: pointer;
-    text-decoration: none;
-    border: 2px solid transparent;
-    transition: border 0.5s ease;
+  background: #fff;
+  padding: 26px;
+  border-radius: 8px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
+  list-style: none;
+  cursor: pointer;
+  text-decoration: none;
+  border: 2px solid transparent;
+  transition: border 0.5s ease;
 }
 .card-list .card-item:hover {
-    border: 2px solid #000;
+  border: 2px solid #000;
 }
 .card-list .card-item img {
-    width: 100%;
-    aspect-ratio: 16/9;
-    border-radius: 8px;
-    object-fit: cover;
+  width: 100%;
+  aspect-ratio: 16/9;
+  border-radius: 8px;
+  object-fit: cover;
 }
 .card-list span {
-    display: inline-block;
-    background: #F7DFF5;
-    margin-top: 32px;
-    padding: 8px 15px;
-    font-size: 0.75rem;
-    border-radius: 50px;
-    font-weight: 600;
+  display: inline-block;
+  background: #f7dff5;
+  margin-top: 32px;
+  padding: 8px 15px;
+  font-size: 0.75rem;
+  border-radius: 50px;
+  font-weight: 600;
 }
 .card-list .developer {
-    background-color: #F7DFF5; 
-    color: #B22485;
-}   
+  background-color: #f7dff5;
+  color: #b22485;
+}
 .card-list .designer {
-    background-color: #d1e8ff;
-    color: #2968a8;
+  background-color: #d1e8ff;
+  color: #2968a8;
 }
 .card-list .editor {
-    background-color: #d6f8d6; 
-    color: #205c20;
+  background-color: #d6f8d6;
+  color: #205c20;
 }
 .card-item h3 {
-    color: #000;
-    font-size: 1.438rem;
-    margin-top: 28px;
-    font-weight: 600;
+  color: #000;
+  font-size: 1.438rem;
+  margin-top: 28px;
+  font-weight: 600;
 }
-.card-item p{
-    color:#333;
-    text-align: justify;
+.card-item p {
+  color: #333;
+  text-align: justify;
 }
 
 @media (max-width: 1200px) {
-    .card-list .card-item {
-        padding: 15px;
-    }
+  .card-list .card-item {
+    padding: 15px;
+  }
 }
 @media screen and (max-width: 980px) {
-    .card-list {
-        margin: 0 auto;
-    }
+  .card-list {
+    margin: 0 auto;
+  }
 }
