--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -1,4 +1,5 @@
 
+
 body {
   height: 95vh;
   display: flex;
@@ -91,6 +92,7 @@ hr{
   background-color: var(--backgroundlight-color);
   box-sizing: border-box;
   border: 3px solid black;
+  overflow-y: scroll;
 }
 
 .Tasklisthead {
@@ -177,12 +179,12 @@ hr{
 
 }
 
-.Tasklistcontent{/* Das ist die Liste der gelisteten Tasks*/
+.Tasklistcontent{/* Das ist die Aufgabenliste der ausgewälten Liste*/
   position: relative;
   height: calc(100%-30px);
   width: 100%;
 
-  overflow-y: scroll;
+  overflow-y: hidden;
   overflow-x: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -193,23 +195,33 @@ hr{
   position: relative;
   height: 40px;
   width: 100%;
-  background-color: var(--yellow-color); 
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content : space-between;
   overflow:hidden;
 }
+
 .Task:nth-child(even){
+  background-color: var(--yellow-color); 
+}
+
+.Task:nth-child(odd){
   background-color: var(--green-color);
 }
 
-.taskname{/* Das ist keine Klasse sondern ein Label, geht das auch*/
+.taskname{/* Name kommt einmal als Label als auch als Klasse vor!!!!!!!!*/
   width:85%;
   overflow-x:hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  text-decoration: none;
   
+}
+
+.checkbox:checked + .taskname{
+  text-decoration: line-through;
+  color: red;
 }
 
 .List:hover, .Task:hover{
