--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -237,7 +237,12 @@ hr{
   display: none;
 }
 
-#addTaskPopUp, #addListPopUp {
+#addTaskForm, #addUserToListPopUp {
+  display: flex;
+  flex-direction: column;
+}
+
+#addTaskPopUp, #addListPopUp, #addUserToListPopUp {
   display: none;
   position: absolute;
   height: 40%;
@@ -248,11 +253,6 @@ hr{
   border-radius: 10px;
   padding: 25px;
   background-color: red;
-}
-
-#addTaskForm {
-  display: flex;
-  flex-direction: column;
 }
 
 #listSpeichern{
