--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -233,7 +233,7 @@ footer .footer-row {
 }
 
 .footer-row .footer-col h4 {
-  color: #fff;
+  color: #495ca8;
   font-size: 1.2rem;
   font-weight: 400;
 }
@@ -250,7 +250,7 @@ footer .footer-row {
 }
 
 .footer-col .links li a:hover {
-  color: #fff;
+  color: #495ca8;
 }
 
 .footer-col p {
@@ -310,11 +310,11 @@ footer .footer-row {
   border-radius: 50px;
   font-weight: 600;
 }
-.card-list .developer {
+.card-list .listen {
   background-color: #f7dff5;
   color: #b22485;
 }
-.card-list .designer {
+.card-list .benutzer {
   background-color: #d1e8ff;
   color: #2968a8;
 }
@@ -343,3 +343,78 @@ footer .footer-row {
     margin: 0 auto;
   }
 }
+
+.flex-container-oben {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-evenly;
+    margin-bottom: 20px;
+  }
+  .flex-container-unten {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: space-evenly;
+  }
+  
+  .flex-item {
+    flex: 1 1 auto;
+    max-width: 500px;
+    width: 80%; /* Two items per row */
+  }
+  
+  .flex-content {
+    display: flex;
+    align-items: center;
+  }
+  
+  .flex-content img {
+    max-width: 30%;
+    height: auto;
+    margin-right: 30px; /* Adjust as needed for spacing between image and text */
+  }
+  
+  .flex-content .flex-text {
+    flex: 1;
+  }
+  
+  .flex-text {
+    width: 200px;
+    max-width: 70%
+  }
+
+
+  .flex-content h4 {
+    margin-top: 0;
+    font-weight: 600;
+    font-size: 1.2rem;
+  }
+  
+  .flex-content p {
+    margin-bottom: 0;
+    text-align: justify;
+  }
+  
+
+  @media screen and (max-width: 1200px) {
+    .flex-item {
+      width: calc(50%); /* Full width on smaller screens */
+    }
+  }
+  @media screen and (max-width: 576px) {
+    .flex-item {
+      width: calc(100%); /* Full width on even smaller screens */
+    }
+  }  
+
+  .header-flex {
+    text-align: center;
+    margin-bottom: 20px;
+  }
+  .header-flex .section-header {
+    font-size: 2.5rem;
+  }
+  .header-flex .section-sub-header {
+    font-size: 1.5rem;
+  }
