--- a/public/styles/general.css
+++ b/public/styles/general.css
@@ -1,6 +1,6 @@
 :root {
     --backgrounddark-color: #101d23;
-    --backgroundlight-color:#1c8fc5;
+    --backgroundlight-color:#d6e0f9;
     --textlight-color: #d6e0f9;
     --textdark-color:#033045;
     --green-color:rgb(83, 240, 35);
