--- a/public/styles/popUps.css
+++ b/public/styles/popUps.css
@@ -1,5 +1,13 @@
 .popUp {
     display: none;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.75);
+    width: 100%;
+    height: 100vh;
+}
+
+.popUpContent {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
