--- a/public/styles/TODOs.css
+++ b/public/styles/TODOs.css
@@ -25,8 +25,8 @@ body::-webkit-scrollbar {
   width: 150px;
   height:80%;
 
-  background-color: var(--backgrounddark-color);
-  color: var(--textlight-color);
+  background-color: var(--backgroundlight-color);
+  color: var(--textdark-color);
   border-radius: 0.5rem;
 
   text-align: center;
@@ -43,6 +43,7 @@ body::-webkit-scrollbar {
   background-color: #29c934;
   border-radius: 50%;
   display: inline-block;
+  margin-right: 5px;
 }
 
 .trashicon{
