--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -62,7 +62,7 @@ button{
 }
 
 button:hover {
-    background-color: #0d941d;
+    background-color: #009B7D;
     scale: 1.05;
 }
 .register-link {
