--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -15,6 +15,9 @@
     border-radius: 10px;
     background-color: #f9f9f9;
 }
+.contact-info:hover {
+    border: 2px solid #000;
+}
 
 .contact-info h2 {
     margin-top: 0;
