--- a/public/styles/register.css
+++ b/public/styles/register.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #080710;
+    background-color: #101d23;;
     display: flex;
     justify-content: center;
     align-items: center;
