--- a/public/styles/contact.css
+++ b/public/styles/contact.css
@@ -29,6 +29,9 @@ h3 {
 h4 {
     color: #495ca8;
 }
+.Informationen p {
+    color:black;
+}
 .contact-info ul {
     list-style: none;
     padding: 0;
@@ -36,6 +39,7 @@ h4 {
 
 .contact-info ul li {
     margin-bottom: 10px;
+    color:black;
 }
 
 .contact-info ul li strong {
