--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -1,4 +1,4 @@
-/* Image am Anfang*/
+/* Image am Ende*/
 .image-container {
   position: relative;
   width: 100%;
@@ -30,12 +30,12 @@
 }
 @media only screen and (max-width: 768px) {
   .text-overlay h1 {
-    font-size: 2em; /* Adjust the font size as needed */
+    font-size: 2em; 
   }
 }
 /*TextBlock*/
 .content {
-  flex: 1 0 70%; /* 70% des verfügbaren Platzes */
+  flex: 1 0 70%; 
   text-align: justify;
 }
 
@@ -46,6 +46,17 @@
   padding: 20px;
   margin-top: 20px;
 }
+.container p {
+  color: black;
+}
+
+.container h1 {
+  color: black;
+}
+.container h2 {
+  color: black;
+}
+
 
 .content {
   flex: 1 1 70%; /* 70% of the available space */
@@ -221,6 +232,25 @@ p {
       width: calc(100%); 
     }
   }  
+  @media screen and (max-width: 850px) {
+    .flex-container-oben {
+      width: 90%;
+      max-width: none;
+      justify-content: center;
+    }
+  }
+  @media screen and (max-width: 850px) {
+    .flex-container-unten {
+      width: 90%;
+      max-width: none;
+      justify-content: center;
+    }
+  }
+  @media screen and (max-width: 576px) {
+    .flex-content {
+      padding-left: 20px; /* Adjust as needed for the desired gap */
+    }
+  }
 
   .header-flex {
     text-align: center;
@@ -231,7 +261,7 @@ p {
     font-size: 2.5rem;
   }
   .header-flex .section-sub-header {
-    font-size: 1.5rem;
+    font-size: 1.8rem;
   }
 
 
