--- a/public/styles/navbar.css
+++ b/public/styles/navbar.css
@@ -15,8 +15,8 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   font-size: 1rem;
-  background: #d6e0f9;
-  color: #333;
+  background: #213c49;
+  color: #fff;
 }
 
 .navbar {
